# CSDP

./: .gitignore  README.md
pipeline/: .gitignore  download_config.yaml  environment.yaml  process_config.yaml  pyproject.toml
pipeline/carbonpipeline/: core.py  dataset.py  downloader.py  main.py
pipeline/carbonpipeline/Geometry/: geometry.py  geometry_processor.py
pipeline/carbonpipeline/Processing/: processor.py
pipeline/examples/: download_config_geojsons.yaml  download_config_site.yaml  process_config_geojsons.yaml
pipeline/examples/geojsons/: file1.geojson  file2.geojson  file3.geojson
pipeline/examples/site/: meta.json
