[project]
name = "carbonpipeline"
version = "1.0.2"
description = "A pipeline to fill missing values in CarbonSense dataset"
readme = "README.md"
dependencies = [
    "cdsapi",
    "xarray",
    "numpy",                       
    "pandas",              
    "numexpr",                       
    "eccodes",
    "ipykernel",
    "netCDF4",
    "beautifulsoup4",
    "pyyaml",
    "rioxarray",
    "dask"
]

[project.scripts]
carbonpipeline = "carbonpipeline.main:run"

[tool.setuptools]
packages = ["carbonpipeline"]
